fixing: 1.remove padding from navlist, added to each nav-link; 2. added padding for logo 18px 0; 3. burger btn. centered (justify-content + align-items), resized to 48x48px; 4. @media (768px table) added padding 0 64px in additional class head-container; 5. navigation style name imported from components.css; 6. added additional class in ul row-list for flex-direction: row; 7. nav-link added padding 24px 0;

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,14 +5,18 @@
 }
 
 .header-nav {
-    padding: 18px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
 }
 
+.nav-link {
+    padding: 18px 0;
+}
+
 .header-logo {
+    padding: 18px 0;
     display: flex;
     align-items: center;
 }
@@ -22,7 +26,7 @@
     height: auto;
 }
 
-.head-nav-list {
+.row-list {
     display: none;
     list-style: none;
     margin: 0;
@@ -53,27 +57,26 @@
 
 .burger-icon {
     fill: #000;
-    display: block;
+    justify-content: center;
+    align-items: center;
 }
 
-
 @media screen and (min-width: 768px) {
-    .header-logo {
-        margin-right: 100px;  /* фиксированный отступ начиная с планшета */
+    .head-container {
+        padding: 0 64px;
     }
 
-    .head-nav-list {
-        display: flex;
+    .header-logo {
+        margin-right: 100px;
+    }
+
+    .row-list {
         flex-direction: row;
-        gap: 32px;
         white-space: nowrap;
+        display: flex;
     }
 
     .burger-btn {
         display: none;
     }
-}
-
-
-@media screen and (min-width: 1440px) {
 }
